agregado dimen para los titulos de fragment y tocado un poco el xml del estao de actividades

--- a/goodjob/app/src/main/res/values/dimens.xml
+++ b/goodjob/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="title_elevation">4dp</dimen>
     <dimen name="text_size_listado_productos_espera">16sp</dimen>
+    <dimen name="text_size_titulos_fragment">24sp</dimen>
 </resources>
