--- a/goodjob/app/src/main/res/layout/fragment_estado_mis_actividades.xml
+++ b/goodjob/app/src/main/res/layout/fragment_estado_mis_actividades.xml
@@ -1,43 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.EstadoMisActividadesFragment"
-    android:background="#f4fcf6">
+    android:background="#f4fcf6"
+    android:orientation="vertical"
+    tools:context=".fragments.EstadoMisActividadesFragment">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="5dp"
-        android:layout_margin="10dp">
+        android:layout_margin="@dimen/small_margin"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="end"
             android:text="Estado de"
-            android:textStyle="bold"
             android:textColor="#FF9800"
-            android:textSize="24dp"
-
-            />
+            android:textSize="@dimen/text_size_titulos_fragment"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_weight="1"
             android:text="mis postulaciones"
             android:textColor="@color/colorPrimary"
-            android:textStyle="bold"
-            android:textSize="24dp" />
-
-
+            android:textSize="@dimen/text_size_titulos_fragment"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvMisActividades"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="50dp"/>
-</FrameLayout>
+        android:layout_height="match_parent" />
+</LinearLayout>
